--- a/styles.css
+++ b/styles.css
@@ -328,9 +328,9 @@ header{
   width: 85%;
   margin: auto;
   border-radius: 5px;
-  border: 3px solid #2e66ff3f;
   display: flex;
-  box-shadow: -45px 25px 0px #2e66ff3f;
+  box-shadow: -15px 15px 15px #000;
+  
 }
 
 .biog .info_biog h3{
@@ -412,7 +412,7 @@ header{
   margin: 0;
   transition: all 0.5s;
   margin-top: 0px;
-  z-index: 200;
+  z-index: 20;
   /*margin-top: -31.25px;*/
 }
 
@@ -534,21 +534,13 @@ header{
   text-align: left;
   width: 50%;
   display: flex;
-  padding: 7px;
-}
-
-.biog .info_biog .habilid_info .habilid_04{
-  background:	#5086c1;
-  border-radius: 14px;
-  text-align: left;
-  width: 40%;
-  display: flex;
+  position: relative;
   padding: 7px;
 }
 
 @media screen and (max-width: 440px) {
   .biog .habilid_info .habilid_static .habilid_posent{
-    left: 80%;
+    left: 75%;
   }
 }
 
@@ -573,7 +565,6 @@ header{
     width: 65%;
     margin: 30px auto;
     border-radius: 5px;
-    box-shadow: none;
   }
 
   .biog .info_biog{
@@ -1063,35 +1054,31 @@ header{
   text-decoration: none;
 }
 
-.foot #social-link_1, #social-link_2, #social-link_3, #social-link_4, #social-link_5{
+.foot #social_link_1, #social_link_2, #social_link_3{
   color: rgba(50, 50, 50, 0.9) ;
   font-size: 40px;
   margin: 0px;
   letter-spacing: 20px;
 }
 
-.foot #social-link_1 i, #social-link_2 i, #social-link_3 i, #social-link_4 i, #social-link_5 i{
+.foot #social_link_1 i, #social_link_2 i, #social_link_3 i{
   transition: all 0.4s;
 }
 
-.foot #social-link_1 i:hover{
+.foot #social_link_1 i:hover{
   color: #3b5998;
   transform:scale(1.25, 1.25);
 }
 
-.foot #social-link_2 i:hover{
+.foot #social_link_2 i:hover{
   color: #4dc247;
   transform:scale(1.25, 1.25);
 }
 
-.foot #social-link_3 i:hover{
+.foot #social_link_3 i:hover{
   color: #ef3a25;
   transform:scale(1.25, 1.25);
 }
-
-
-
-
 
 .foot .copy{
   font-family: Helvetica, sans-serif;
