--- a/styles.css
+++ b/styles.css
@@ -785,7 +785,7 @@ header{
   box-shadow: 10px 10px 15px rgb(0, 0, 0, 0.7);
   border-radius: 10px;
   background: #ececec; 
-
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .contact .email_form h4{
@@ -1082,7 +1082,7 @@ header{
 
 .foot .copy{
   font-family: Helvetica, sans-serif;
-  font-size: 15px;
+  font-size: 18px;
   margin: 0;
   text-align: right;
   align-self: center;
