--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ header{
   padding: 0;
   margin: 0;
   margin-top: 58.5px;
-  height: 380px;
+  height: 420px;
   margin-left: -100% ;
   transition: all 0.7s;
   z-index: 90;
@@ -122,7 +122,7 @@ header{
   }
 }
 
-@media(min-width:720px) {
+@media(min-width:800px) {
   .nav-bar{
     display: none;
   }
@@ -181,14 +181,9 @@ header{
 }
 
 #banner .info h1 {
-  font-size: 3.0em;
+  font-size: 2.9em;
   color: #ffffff;
   font-family: 'Montserrat', sans-serif;
-}
-
-#banner .title_line{
-  animation: lit 1s infinite;
-  transition: none;
 }
 
 #banner .content-bant .info-text p, li{
@@ -203,11 +198,11 @@ header{
   display: flex;
   width: 360px;
   height: 35px;
-  font-size: 1.6em;
+  font-size: 1.5em;
   line-height: 35px;
   color: white;
   overflow: hidden;
-  margin-top: 20px;
+  margin-top: 25px;
 }
 
 #banner .info-text ul{
@@ -221,7 +216,7 @@ header{
 }
 
 #banner .info-text li{
-  color: #70a0ff;
+  color: #4885ff;
 }
 
 @keyframes cambiar {
@@ -505,7 +500,7 @@ header{
 }
 
 .biog .info_biog .habilid_info .habilid_02_1 .skill_04{
-  width: 33%;
+  width: 50%;
   border-top-left-radius: 14px;
   border-bottom-left-radius:14px ;
   background: #787cb4;
@@ -513,7 +508,7 @@ header{
   padding: 7px;
 }
 .biog .info_biog .habilid_info .habilid_02_1 .skill_05{
-  width: 33%;
+  width: 50%;
   background: #ffa518;
   position: relative;
   padding: 7px;
@@ -546,7 +541,7 @@ header{
 
 /* /habilidades*/
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 820px) {
   .biog{
     padding: 10px;
   }
@@ -563,6 +558,7 @@ header{
   .biog img {
     display: block;
     width: 65%;
+    max-width: 300px;
     margin: 30px auto;
     border-radius: 5px;
   }
@@ -575,6 +571,511 @@ header{
 }
 
 /*/Sobre mi*/
+
+/* Portafolio */
+
+.port{
+  padding: 20px;
+}
+
+.port .port_content{
+  padding: 30px;
+  background: rgba(10, 10, 10, 0.10);
+  border-radius: 10px;
+}
+
+.port h1{
+  text-align: center;
+  font-size: 23.5px;
+  
+  display: inline-flex;
+  border-left: 2px solid #03318C; 
+  padding-left: 25px;
+  padding: 10px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.port h3{
+  text-align: left;
+  font-weight: 300;
+  color: #418ACA;
+}
+
+.port .port_menu{
+  background: #141414;
+  margin: auto;
+  box-sizing: border-box;
+  padding: 20px;
+  padding-bottom: 30px;
+  border-radius: 10px;
+  border-top-left-radius: 0;
+}
+
+.port .link_port{
+  background: none;
+  border: none;
+  color: #ffffff;
+  cursor: pointer;
+  font-size: 18px;
+  transition: all 0.5s;
+  background: #141414;
+  margin-top: 5px;
+
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px ;
+  
+  padding: 11px;
+}
+
+.port .link_port:hover{
+  color: #418ACA;
+}
+
+/* Proyectos*/
+
+.port .port_proyect{
+  display: none;
+}
+
+.port_proyect h2{
+  margin: 20px;
+  display: inline-flex;
+  font-size: 33px;
+  text-align: left;
+
+  text-shadow: 0.06em 0 0 rgba(255, 0, 0, 0.75),
+  -0.035em -0.06em 0 rgba(0, 255, 0, 0.75),
+  0.035em 0.06em 0 rgba(0, 0, 255, 0.75);
+
+  animation: glitch 500ms infinite;
+}
+
+.port_proyect .content_proyect{
+  display: grid;
+  grid-template-columns: 100%;
+}
+
+.content_proyect .proyect_prox{
+  background: #04032b;
+  border-radius: 15px;
+  box-shadow: -5px 5px 5px #000;
+  padding: 25px;
+  margin: auto;
+  display: flex;
+}
+
+.content_proyect .proyect_prox h2{
+  font-size: 80%;
+}
+
+.content_proyect .proyect_prox h2{
+  margin: auto;
+}
+
+/* Proyectos*/
+
+/*Demos*/
+
+.port .port_demos{
+  display: block;
+  width: auto;
+}
+
+.port_demos h2{
+  margin: 20px;
+  display: inline-flex;
+  font-size: 33px;
+  text-align: left;
+
+  text-shadow: 0.06em 0 0 rgba(255, 0, 0, 0.75),
+  -0.035em -0.06em 0 rgba(0, 255, 0, 0.75),
+  0.035em 0.06em 0 rgba(0, 0, 255, 0.75);
+
+  animation: glitch 500ms infinite;
+}
+
+@keyframes glitch {
+  0% {
+    text-shadow: 0.05em 0 0 rgba(255, 0, 0, 0.75),
+      -0.05em -0.025em 0 rgba(0, 255, 0, 0.75),
+      -0.025em 0.05em 0 rgba(0, 0, 255, 0.75);
+  }
+  
+  15% {
+    text-shadow: -0.05em -0.025em 0 rgba(255, 0, 0, 0.75),
+      0.025em 0.025em 0 rgba(0, 255, 0, 0.75),
+      -0.05em -0.05em 0 rgba(0, 0, 255, 0.75);
+  }
+  
+  50% {
+    text-shadow: 0.025em 0.05em 0 rgba(255, 0, 0, 0.75),
+      0.05em 0 0 rgba(0, 255, 0, 0.75), 
+      0 -0.05em 0 rgba(0, 0, 255, 0.75);
+  }
+  
+  100% {
+    text-shadow: -0.025em 0 0 rgba(255, 0, 0, 0.75),
+      -0.025em -0.025em 0 rgba(0, 255, 0, 0.75),
+      -0.025em -0.05em 0 rgba(0, 0, 255, 0.75);
+  }
+}
+
+.port_demos .content_demos{
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  grid-gap: 10px;
+  box-sizing: border-box;
+}
+
+/* Post 1*/
+
+.port_demos .demo_1{
+  max-width: 390px;
+  max-height: 290px;
+  box-sizing: border-box;
+  display: inline-flex ;
+  margin: auto;
+  position: relative;
+  overflow: hidden;
+  border-radius: 15px;
+  box-shadow: -5px 5px 5px #000;
+}
+
+.port_demos .demo_1:hover .back_demo_1{
+  left: 0%;
+}
+
+.demo_1 .info_demo_1{
+  background: #0e0e0e;
+  border-radius: 15px;
+  width: 100%;
+  padding: 15px;
+  position: relative;
+}
+
+.demo_1 .info_demo_1 h3{
+  margin: auto;
+  text-align: center;
+  font-weight: 700;
+}
+
+.demo_1 .info_demo_1 img{
+  display: inline-flex;
+  max-width: 170px;
+  display: block;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+
+  border-radius: 10px;
+}
+
+.demo_1 .info_demo_1 p{
+  text-align: center;
+  margin: 10px;
+}
+
+.demo_1 .back_demo_1{
+  background: #010314d7;
+  border-radius: 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  position:absolute;
+  transition: all 0.5s;
+  left: 100%;
+  backdrop-filter: blur(2px);
+}
+
+.demo_1 .back_demo_1 h3{
+  text-align: center;
+}
+
+.demo_1 .back_demo_1 p{
+  text-align: center;
+}
+
+.demo_1 .back_demo_1 .buttom_port{
+  display: block;
+  align-content: center;
+  text-align: center;
+  margin-top: 15px;
+}
+
+.demo_1 .back_demo_1 a{
+  text-decoration: none;
+  background: #1f1f1fb0;
+  border: 1px solid #fff;
+  border-radius: 6px;
+  padding: 7px;
+  color: #fff;
+  display: inline-block;
+  transition: all 0.5s;
+  margin: 10px;
+}
+
+.demo_1 .back_demo_1 a:hover{
+  background: rgb(16, 4, 128);
+}
+
+.demo_1 .back_demo_1 a i{
+  margin-right: 5px ;
+}
+
+/* /Post 1*/
+
+/* Post 2*/
+
+.port_demos .demo_2{
+  max-width: 390px;
+  max-height: 290px;
+  box-sizing: border-box;
+  display: inline-flex ;
+  margin: auto;
+  position: relative;
+  overflow: hidden;
+  border-radius: 15px;
+  box-shadow: -5px 5px 5px #000;
+}
+
+.port_demos .demo_2:hover .back_demo_2{
+  top: 0%;
+}
+
+.demo_2 .info_demo_2{
+  background: #0e0e0e;
+  border-radius: 15px;
+  width: 100%;
+  padding: 15px;
+  position: relative;
+}
+
+.demo_2 .info_demo_2 h3{
+  margin: auto;
+  text-align: center;
+  font-weight: 700;
+}
+
+.demo_2 .info_demo_2 img{
+  display: inline-flex;
+  max-width: 170px;
+  display: block;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+
+  border-radius: 10px;
+}
+
+.demo_2 .info_demo_2 p{
+  text-align: center;
+  margin: 10px;
+}
+
+.demo_2 .back_demo_2{
+  background: #010314d7;
+  border-radius: 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  position:absolute;
+  transition: all 0.5s;
+  top: 100%;
+  backdrop-filter: blur(2px);
+}
+
+.demo_2 .back_demo_2 h3{
+  text-align: center;
+}
+
+.demo_2 .back_demo_2 p{
+  text-align: center;
+}
+
+.demo_2 .back_demo_2 .buttom_port{
+  display: block;
+  align-content: center;
+  text-align: center;
+  margin-top: 15px;
+}
+
+.demo_2 .back_demo_2 a{
+  text-decoration: none;
+  background: #1f1f1fb0;
+  border: 1px solid #fff;
+  border-radius: 6px;
+  padding: 7px;
+  color: #fff;
+  display: inline-block;
+  transition: all 0.5s;
+  margin: 10px;
+}
+
+.demo_2 .back_demo_2 a:hover{
+  background: rgb(16, 4, 128);
+}
+
+.demo_2 .back_demo_2 a i{
+  margin-right: 5px ;
+}
+
+/* /Post 2*/
+
+/* Post 3*/
+
+.port_demos .demo_3{
+  max-width: 390px;
+  max-height: 290px;
+  box-sizing: border-box;
+  display: inline-flex ;
+  margin: auto;
+  position: relative;
+  overflow: hidden;
+  border-radius: 15px;
+  box-shadow: -5px 5px 5px #000;
+}
+
+.port_demos .demo_3:hover .back_demo_3{
+  right: 0%;
+}
+
+.demo_3 .info_demo_3{
+  background: #0e0e0e;
+  border-radius: 15px;
+  width: 100%;
+  padding: 15px;
+  position: relative;
+}
+
+.demo_3 .info_demo_3 h3{
+  margin: auto;
+  text-align: center;
+  font-weight: 700;
+}
+
+.demo_3 .info_demo_3 img{
+  display: inline-flex;
+  max-width: 170px;
+  display: block;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+
+  border-radius: 10px;
+}
+
+.demo_3 .info_demo_3 p{
+  text-align: center;
+  margin: 10px;
+}
+
+.demo_3 .back_demo_3{
+  background: #010314d7;
+  border-radius: 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  position:absolute;
+  transition: all 0.5s;
+  right: 100%;
+  backdrop-filter: blur(2px);
+}
+
+.demo_3 .back_demo_3 h3{
+  text-align: center;
+}
+
+.demo_3 .back_demo_3 p{
+  text-align: center;
+}
+
+.demo_3 .back_demo_3 .buttom_port{
+  display: block;
+  align-content: center;
+  text-align: center;
+  margin-top: 15px;
+}
+
+.demo_3 .back_demo_3 a{
+  text-decoration: none;
+  background: #1f1f1fb0;
+  border: 1px solid #fff;
+  border-radius: 6px;
+  padding: 7px;
+  color: #fff;
+  display: inline-block;
+  transition: all 0.5s;
+  margin: 10px;
+}
+
+.demo_3 .back_demo_3 a:hover{
+  background: rgb(16, 4, 128);
+}
+
+.demo_3 .back_demo_3 a i{
+  margin-right: 5px ;
+}
+
+/* /Post 3*/
+
+/*Demos*/
+
+@media (max-width: 1270px){
+
+  .port_demos .content_demos{
+    grid-template-columns: 50% 50%;
+    grid-gap: 15px;
+  }
+
+}
+
+@media (max-width: 750px) {
+  .port{
+    padding: 10px;
+  }
+  
+  .port .port_content{
+    padding: 15px;
+  }
+
+  .port_demos .content_demos{
+    grid-template-columns: 100%;
+    grid-gap: 20px;
+  }
+
+  .demo_1{
+    font-size: 75%;
+    margin: 0;
+  }
+
+  .demo_1 img{
+    width: 55%;
+  }
+
+  .demo_2 {
+    font-size: 75%;
+    margin: 0;
+  }
+
+  .demo_2 img{
+    width: 55%;
+  }
+
+  .demo_3 {
+    font-size: 75%;
+    margin: 0;
+  }
+
+  .demo_3 img{
+    width: 55%;
+  }
+
+}
+
+/* /Portafolio */
 
 /*Servicios*/
 
@@ -740,6 +1241,7 @@ header{
 
   }
 
+
 /*/Servicios*/
 
 /*Contacto*/
@@ -859,6 +1361,7 @@ header{
   background: #0000002d;
   margin-bottom: 20px;
   box-shadow: 8px 8px 12px rgb(0, 0, 0, 0.7);
+  border-radius: 15px;
 }
 
 .contact .post_inicial h2{
@@ -1077,6 +1580,7 @@ header{
 
 .foot #social_link_3 i:hover{
   color: #ef3a25;
+  cursor: pointer;
   transform:scale(1.25, 1.25);
 }
 
